--- a/.config
+++ b/.config
@@ -183,8 +183,8 @@ CONFIG_CC_OPTIMIZE_FOR_SIZE=y
 CONFIG_DISTRO_DEFAULTS=y
 CONFIG_ENV_VARS_UBOOT_CONFIG=y
 CONFIG_NR_DRAM_BANKS=1
-CONFIG_SYS_BOOT_GET_CMDLINE=y
-CONFIG_SYS_BOOT_GET_KBD=y
+# CONFIG_SYS_BOOT_GET_CMDLINE is not set
+# CONFIG_SYS_BOOT_GET_KBD is not set
 CONFIG_SYS_MALLOC_F=y
 CONFIG_TPL_SYS_MALLOC_F_LEN=0x2000
 CONFIG_EXPERT=y
@@ -227,9 +227,11 @@ CONFIG_BOOTSTAGE_STASH_SIZE=0x1000
 # CONFIG_SATA_BOOT is not set
 # CONFIG_SD_BOOT is not set
 # CONFIG_SPI_BOOT is not set
+CONFIG_BOOTDELAY=0
 # CONFIG_USE_BOOTARGS is not set
 CONFIG_USE_BOOTCOMMAND=y
-CONFIG_BOOTCOMMAND="mmc dev 0 ; tpm2 startup TPM2_SU_CLEAR ; time ; fatload mmc 0:1 ${kernel_addr_r} zImage ;  sha1sum ${kernel_addr_r} ${filesize} 0x2700000 ; tpm2 pcr_extend 0 0x2700000 ;setenv bootargs dwc_otg.lpm_enable=0 console=tty1 rootfstype=ext4 rootwait root=/dev/mmcblk0p2 fsck.mode=force fsck.repair=yes elevator=deadline ;  bootz ${kernel_addr_r} - ${fdt_addr} "
+CONFIG_BOOTCOMMAND="mmc dev 0 ; tpm2 startup TPM2_SU_CLEAR ; time ; fatload mmc 0:1 ${kernel_addr_r} zImage ;  sha1sum ${kernel_addr_r} ${filesize} 0x2700000 ; tpm2 pcr_extend 0 0x2700000 ;setenv bootargs dwc_otg.lpm_enable=0 console=tty1 rootfstype=ext4 rootwait root=/dev/mmcblk0p2 fsck.mode=force fsck.repair=yes init=/bin/resizefs elevator=deadline ;  bootz ${kernel_addr_r} - ${fdt_addr} "
+
 
 #
 # Console
@@ -301,7 +303,7 @@ CONFIG_SYS_PROMPT="U-Boot> "
 #
 # Autoboot options
 #
-# CONFIG_AUTOBOOT is not set
+CONFIG_AUTOBOOT=y
 CONFIG_AUTOBOOT_KEYED=y
 CONFIG_AUTOBOOT_PROMPT="n"
 # CONFIG_AUTOBOOT_ENCRYPTION is not set
@@ -332,7 +334,7 @@ CONFIG_CMD_BOOTEFI=y
 CONFIG_CMD_BOOTEFI_HELLO_COMPILE=y
 # CONFIG_CMD_BOOTEFI_HELLO is not set
 # CONFIG_CMD_BOOTEFI_SELFTEST is not set
-CONFIG_CMD_BOOTMENU=y
+# CONFIG_CMD_BOOTMENU is not set
 # CONFIG_CMD_DTIMG is not set
 CONFIG_CMD_ELF=y
 CONFIG_CMD_FDT=y
