--- a/.config
+++ b/.config
@@ -230,7 +230,7 @@ CONFIG_BOOTSTAGE_STASH_SIZE=0x1000
 CONFIG_BOOTDELAY=0
 # CONFIG_USE_BOOTARGS is not set
 CONFIG_USE_BOOTCOMMAND=y
-CONFIG_BOOTCOMMAND="mmc dev 0 ; tpm2 startup TPM2_SU_CLEAR ; time ; fatload mmc 0:1 ${kernel_addr_r} zImage ;  sha1sum ${kernel_addr_r} ${filesize} 0x2700000 ; tpm2 pcr_extend 0 0x2700000 ;setenv bootargs dwc_otg.lpm_enable=0 console=tty1 rootfstype=ext4 rootwait root=/dev/mmcblk0p2 fsck.mode=force fsck.repair=yes init=/bin/resizefs elevator=deadline ;  bootz ${kernel_addr_r} - ${fdt_addr} "
+CONFIG_BOOTCOMMAND="mmc dev 0 ; tpm2 startup TPM2_SU_CLEAR ; time ; fatload mmc 0:1 ${kernel_addr_r} zImage ;  sha1sum ${kernel_addr_r} ${filesize} 0x2700000 ; tpm2 pcr_extend 0 0x2700000 ;setenv bootargs dwc_otg.lpm_enable=0 console=tty1 rootfstype=ext4 rootwait root=/dev/mmcblk0p2 fsck.mode=force fsck.repair=yes elevator=deadline ;  bootz ${kernel_addr_r} - ${fdt_addr} "
 
 
 #
