Fixed passing GPU bootargs into kernel. Should fix serial assignment issues

--- a/.config
+++ b/.config
@@ -227,11 +227,9 @@ CONFIG_BOOTSTAGE_STASH_SIZE=0x1000
 # CONFIG_SATA_BOOT is not set
 # CONFIG_SD_BOOT is not set
 # CONFIG_SPI_BOOT is not set
-CONFIG_BOOTDELAY=0
 # CONFIG_USE_BOOTARGS is not set
 CONFIG_USE_BOOTCOMMAND=y
-CONFIG_BOOTCOMMAND="mmc dev 0 ; tpm2 startup TPM2_SU_CLEAR ; time ; fatload mmc 0:1 ${kernel_addr_r} zImage ;  sha1sum ${kernel_addr_r} ${filesize} 0x2700000 ; tpm2 pcr_extend 0 0x2700000 ;setenv bootargs dwc_otg.lpm_enable=0 console=tty1 rootfstype=ext4 rootwait root=/dev/mmcblk0p2 fsck.mode=force fsck.repair=yes elevator=deadline ;  bootz ${kernel_addr_r} - ${fdt_addr} "
-
+CONFIG_BOOTCOMMAND="mmc dev 0 ; tpm2 startup TPM2_SU_CLEAR ; fatload mmc 0:1 ${kernel_addr_r} zImage ;  sha1sum ${kernel_addr_r} ${filesize} 0x2700000 ; tpm2 pcr_extend 0 0x2700000 ; fdt addr ${fdt_addr}; fdt get value bootargs /chosen bootargs; env set bootargs ${bootargs} fsck.mode=force ; bootz ${kernel_addr_r} - ${fdt_addr}"
 
 #
 # Console
@@ -303,7 +301,7 @@ CONFIG_SYS_PROMPT="U-Boot> "
 #
 # Autoboot options
 #
-CONFIG_AUTOBOOT=y
+# CONFIG_AUTOBOOT is not set
 CONFIG_AUTOBOOT_KEYED=y
 CONFIG_AUTOBOOT_PROMPT="n"
 # CONFIG_AUTOBOOT_ENCRYPTION is not set
@@ -404,7 +402,7 @@ CONFIG_RANDOM_UUID=y
 # CONFIG_CMD_IDE is not set
 # CONFIG_CMD_IO is not set
 # CONFIG_CMD_IOTRACE is not set
-# CONFIG_CMD_I2C is not set
+CONFIG_CMD_I2C=y
 CONFIG_CMD_LOADB=y
 CONFIG_CMD_LOADS=y
 CONFIG_CMD_MMC=y
@@ -693,6 +691,7 @@ CONFIG_DM_GPIO=y
 # CONFIG_MSM_GPIO is not set
 # CONFIG_MXC_GPIO is not set
 # CONFIG_CMD_PCA953X is not set
+# CONFIG_PCF8575_GPIO is not set
 # CONFIG_ROCKCHIP_GPIO is not set
 # CONFIG_XILINX_GPIO is not set
 # CONFIG_CMD_TCA642X is not set
@@ -706,11 +705,20 @@ CONFIG_DM_GPIO=y
 #
 # I2C support
 #
-# CONFIG_DM_I2C is not set
+CONFIG_DM_I2C=y
 # CONFIG_DM_I2C_COMPAT is not set
+CONFIG_I2C_SET_DEFAULT_BUS_NUM=y
+CONFIG_I2C_DEFAULT_BUS_NUMBER=0x1
+# CONFIG_DM_I2C_GPIO is not set
+# CONFIG_SYS_I2C_FSL is not set
 # CONFIG_SYS_I2C_DW is not set
+# CONFIG_SYS_I2C_INTEL is not set
 # CONFIG_SYS_I2C_IMX_LPI2C is not set
 # CONFIG_SYS_I2C_MXC is not set
+# CONFIG_SYS_I2C_ROCKCHIP is not set
+# CONFIG_SYS_I2C_MVTWSI is not set
+# CONFIG_SYS_I2C_IHS is not set
+# CONFIG_I2C_MUX is not set
 CONFIG_INPUT=y
 CONFIG_DM_KEYBOARD=y
 # CONFIG_CROS_EC_KEYB is not set
