--- a/.config
+++ b/.config
@@ -301,7 +301,7 @@ CONFIG_SYS_PROMPT="U-Boot> "
 #
 # Autoboot options
 #
-# CONFIG_AUTOBOOT is not set
+CONFIG_AUTOBOOT=y
 CONFIG_AUTOBOOT_KEYED=y
 CONFIG_AUTOBOOT_PROMPT="n"
 # CONFIG_AUTOBOOT_ENCRYPTION is not set
